--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </header>
     <section class="home-hero">
       <div class="home-hero__content">
-        <h1 class="heading-primary">Hola, me llamo Javier</h1>
+        <h1 class="heading-primary">Hola, me llamo Javier.</h1>
         <div class="home-hero__info">
           <p class="text-primary">
             Un desarrollador web interesado en oportunidades para construir 
@@ -152,28 +152,28 @@
         </h2>
         <div class="about__content">
           <div class="about__content-main">
-            <h3 class="about__content-title">Conoceme!</h3>
+            <h3 class="about__content-title">Conóceme!</h3>
             <div class="about__content-details">
               <p class="about__content-details-para">
                 ¡Hola! Mi nombre es 
                 <strong>Javier</strong>
                 y soy un <strong> desarrollador web </strong>con experiencia en proyectos de backend y frontend. Actualmente, estoy cursando mi primer 
-                semestre en la carrera de Informática y estoy emocionado por todo lo que puedo aprender en el futuro
+                semestre en la carrera de Informática y estoy emocionado por todo lo que puedo aprender en el futuro.
               </p>
               <p class="about__content-details-para">
                 Me apasiona el desarrollo de backend, sin embargo, estoy dispuesto a aprender y trabajar en el frontend. Estoy 
                 siempre buscando nuevas oportunidades de crecimiento y aprendizaje en el campo del desarrollo web. Estoy comprometido 
-                en mi búsqueda de contribuir a proyectos emocionantes que me permitan mejorar mis habilidades y conocimientos
+                en mi búsqueda de contribuir a proyectos emocionantes que me permitan mejorar mis habilidades y conocimientos.
               </p>
               <p class="about__content-details-para">
                 Durante mi tiempo libre, me encanta trabajar en proyectos personales de programación, estos proyectos me han 
                 permitido explorar nuevas tecnologías y ampliar mi conocimiento en diferentes áreas de la programación.
                 Estoy emocionado por las posibilidades que el futuro tiene para ofrecer en el mundo del desarrollo web y estoy buscando nuevas 
-                oportunidades para crecer y contribuir en cualquier proyecto en el que pueda ser parte
+                oportunidades para crecer y contribuir en cualquier proyecto en el que pueda ser parte.
               </p>
             </div>
             <a href="./index.html#contact" class="btn btn--med btn--theme dynamicBgClr"
-              >Contactame</a
+              >Contáctame</a
             >
           </div>
           <div class="about__content-skills">
@@ -242,7 +242,7 @@
               <p class="projects__row-content-desc">
                 MiniGPT, es un bot para Telegram escrito en JavaScript utilizando las librerías de Telegraf
                 y OpenAI. Este bot hace uso de las APIs de Telegram, OpenAI y Writesonic, lo que te permitirá 
-                disfrutar de una experiencia de chat similar a la de ChatGPT dentro de la aplicación de Telegram 
+                disfrutar de una experiencia de chat similar a la de ChatGPT dentro de la aplicación de Telegram. 
 
               </p>
               <a
@@ -267,7 +267,7 @@
               <p class="projects__row-content-desc">
                 CryptoPricy, es un bot para Telegram escrito en Python utilizando las librerías de Telegram, CoinGecko
                 y Pickle. Este bot hace uso de las APIs de Telegram y CoinGecko, lo que permite consultar el precio
-                de todas las cryptomonedas en la plataforma de CoinGecko
+                de todas las cryptomonedas en la plataforma de CoinGecko.
               </p>
               <!-- <a
                 href="./project-3.html"
@@ -283,9 +283,9 @@
     <section id="contact" class="contact sec-pad dynamicBg">
       <div class="main-container">
         <h2 class="heading heading-sec heading-sec__mb-med">
-          <span class="heading-sec__main heading-sec__main--lt">Contactame</span>
+          <span class="heading-sec__main heading-sec__main--lt">Contáctame</span>
           <span class="heading-sec__sub heading-sec__sub--lt">
-            Sientete libre de contactarme rellenando el siguiente formulario
+            Sientete libre de contactarme rellenando el siguiente formulario.
           </span>
         </h2>
         <div class="contact__form-container">
