--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
         <h2 class="heading heading-sec heading-sec__mb-med">
           <span class="heading-sec__main heading-sec__main--lt">Contáctame</span>
           <span class="heading-sec__sub heading-sec__sub--lt">
-            Sientete libre de contactarme rellenando el siguiente formulario.
+            Siéntete libre de contactarme rellenando el siguiente formulario.
           </span>
         </h2>
         <div class="contact__form-container">
